all events done

--- a/events-workshopMeity.html
+++ b/events-workshopMeity.html
@@ -456,7 +456,307 @@
       </div>
     </div>
   </section>
+  <section class="semi_portfolios heading_element py-5" id="nsf_speakers">
+    <div class="container custom_container">
+        <div class="row justify-content-center">
+            <div class="col-12">
+                <h2 class="sub-heading mt-0 mb-5"><span>EVENT DIGNITARIES</span> <span class="line"></span></h2>
+            </div>
 
+            <div class="col-12 col-sm-6 col-md-6 col-lg-4  col-xl-3">
+                <div class="img-card ratio ratio-9x16 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100"><img alt="Speaker 4" class="img-fluid" src="https://d2p5j06zete1i7.cloudfront.net/Cms/admin/1698640686.jpg" title="speaker">
+                    <div class="overlay">&nbsp;</div>
+
+                    <div class="content">
+                        <h3>Shri S. Krishnan</h3>
+
+                        <p>Secretary, Ministry of Electronics &amp; Information Technology</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-6 col-lg-4  col-xl-3">
+                <div class="img-card ratio ratio-9x16 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100"><img alt="Speaker 4" class="img-fluid" src="https://d2p5j06zete1i7.cloudfront.net/Cms/admin/1698640693.jpg" title="speaker">
+                    <div class="overlay">&nbsp;</div>
+
+                    <div class="content">
+                        <h3>Bhuvnesh Kumar</h3>
+
+                        <p>Additional Secretary, Ministry of Electronics &amp; Information Technology</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container card-container">
+        <div class="row justify-content-center">
+            <div class="col-12">
+                <h2 class="sub-heading mt-5 mb-5"><span>EVENT SPEAKERS</span> <span class="line"></span></h2>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-12 col-sm-6 col-md-6 col-lg-4  col-xl-3 card-js visible">
+                <div class="img-card ratio ratio-9x16 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100"><img alt="Speaker 4" class="img-fluid" src="https://ism.gov.in/static/dist/images_2/meity_nsf/speakers/Suchi_Guha.jpg" title="speaker">
+                    <div class="overlay">&nbsp;</div>
+
+                    <div class="content">
+                        <h3>Suchi Guha</h3>
+
+                        <p>Professor, University of Missouri, USA</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-6 col-lg-4  col-xl-3 card-js visible">
+                <div class="img-card ratio ratio-9x16 aos-init aos-animate" data-aos="fade-up" data-aos-delay="200"><img alt="Speaker 2" class="img-fluid" src="https://d2p5j06zete1i7.cloudfront.net/Cms/admin/1698812556.jpg" title="speaker">
+                    <div class="overlay">&nbsp;</div>
+
+                    <div class="content">
+                        <h3>Vinod Vaikuntanathan</h3>
+
+                        <p>Professor, MIT, USA</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-6 col-lg-4  col-xl-3 card-js visible">
+                <div class="img-card ratio ratio-9x16 aos-init aos-animate" data-aos="fade-up" data-aos-delay="200"><img alt="Speaker 2" class="img-fluid" src="https://ism.gov.in/static/dist/images_2/meity_nsf/speakers/Yunsi_Fei.jpg" title="speaker">
+                    <div class="overlay">&nbsp;</div>
+
+                    <div class="content">
+                        <h3>Yunsi Fei</h3>
+
+                        <p>Professor, Northeastern University, USA</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-6 col-lg-4  col-xl-3 card-js visible">
+                <div class="img-card ratio ratio-9x16 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100"><img alt="Speaker 4" class="img-fluid" src="https://ism.gov.in/static/dist/images_2/meity_nsf/speakers/Vyas_Sekar.jpg" title="speaker">
+                    <div class="overlay">&nbsp;</div>
+
+                    <div class="content">
+                        <h3>Vyas Sekar</h3>
+
+                        <p>Professor, Carnegie Mellon University, USA</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-6 col-lg-4  col-xl-3 card-js">
+                <div class="img-card ratio ratio-9x16 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100"><img alt="Speaker 4" class="img-fluid" src="https://ism.gov.in/static/dist/images_2/meity_nsf/speakers/Anand_Padmanabhan.jpg" title="speaker">
+                    <div class="overlay">&nbsp;</div>
+
+                    <div class="content">
+                        <h3>Anand Padmanabhan</h3>
+
+                        <p>Research Associate Professor, University of Illinois, USA</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-6 col-lg-4  col-xl-3 card-js">
+                <div class="img-card ratio ratio-9x16 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100"><img alt="Speaker 4" class="img-fluid" src="https://ism.gov.in/static/dist/images_2/meity_nsf/speakers/Gerardo_Ortiz.jpg" title="speaker">
+                    <div class="overlay">&nbsp;</div>
+
+                    <div class="content">
+                        <h3>Gerardo Ortiz</h3>
+
+                        <p>Professor, Indiana University, USA</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-6 col-lg-4  col-xl-3 card-js">
+                <div class="img-card ratio ratio-9x16 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100"><img alt="Speaker 4" class="img-fluid" src="https://ism.gov.in/static/dist/images_2/meity_nsf/speakers/David_Stewart.png" title="speaker">
+                    <div class="overlay">&nbsp;</div>
+
+                    <div class="content">
+                        <h3>David J. Stewart</h3>
+
+                        <p>Managing Director, Purdue Quantum Science and Engineering Institute, USA</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-6 col-lg-4  col-xl-3 card-js">
+                <div class="img-card ratio ratio-9x16 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100"><img alt="Speaker 4" class="img-fluid" src="https://ism.gov.in/static/dist/images_2/meity_nsf/speakers/Kaushik_Chowdhury.jpg" title="speaker">
+                    <div class="overlay">&nbsp;</div>
+
+                    <div class="content">
+                        <h3>Kaushik Chowdhury</h3>
+
+                        <p>Professor, Northeastern University, USA</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-6 col-lg-4  col-xl-3 card-js">
+                <div class="img-card ratio ratio-9x16 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100"><img alt="Speaker 4" class="img-fluid" src="https://ism.gov.in/static/dist/images_2/meity_nsf/speakers/rathesesh.png" title="speaker">
+                    <div class="overlay">&nbsp;</div>
+
+                    <div class="content">
+                        <h3>Dr. R. Ratheesh</h3>
+
+                        <p>Scientist, Centre for Materials for Electronics Technology (C-MET)</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-6 col-lg-4  col-xl-3 card-js">
+                <div class="img-card ratio ratio-9x16 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100"><img alt="Speaker 4" class="img-fluid" src="https://ism.gov.in/static/dist/images_2/meity_nsf/speakers/mukul_sarkar.png" title="speaker">
+                    <div class="overlay">&nbsp;</div>
+
+                    <div class="content">
+                        <h3>Prof. Mukul Sarkar</h3>
+
+                        <p>Professor, Indian Institute of Technology - Delhi</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-6 col-lg-4  col-xl-3 card-js">
+                <div class="img-card ratio ratio-9x16 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100"><img alt="Speaker 4" class="img-fluid" src="https://ism.gov.in/static/dist/images_2/meity_nsf/speakers/hazursaran.png" title="speaker">
+                    <div class="overlay">&nbsp;</div>
+
+                    <div class="content">
+                        <h3>Prof. Huzur saran</h3>
+
+                        <p>Professor, Indian Institute of Technology - Delhi</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-6 col-lg-4  col-xl-3 card-js">
+                <div class="img-card ratio ratio-9x16 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100"><img alt="Speaker 4" class="img-fluid" src="https://ism.gov.in/static/dist/images_2/meity_nsf/speakers/vrinda_kapoor.jpg" title="speaker">
+                    <div class="overlay">&nbsp;</div>
+
+                    <div class="content">
+                        <h3>Vrinda Kapoor</h3>
+
+                        <p>&nbsp;</p>
+                    </div>
+                </div>
+            </div>
+ 
+            <div class="col-12 col-sm-6 col-md-6 col-lg-4  col-xl-3 card-js">
+                <div class="img-card ratio ratio-9x16 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100"><img alt="Speaker 4" class="img-fluid" src="https://ism.gov.in/static/dist/images_2/meity_nsf/speakers/smruti_ranjan_sarangi.jpg" title="speaker">
+                    <div class="overlay">&nbsp;</div>
+
+                    <div class="content">
+                        <h3>Smruti Ranjan Sarangi</h3>
+
+                        <p>Faculty member, Indian Institute of Technology - Delhi</p>
+                    </div>
+                </div>
+            </div>
+ 
+            <div class="col-12 col-sm-6 col-md-6 col-lg-4  col-xl-3 card-js">
+                <div class="img-card ratio ratio-9x16 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100"><img alt="Speaker 4" class="img-fluid" src="https://ism.gov.in/static/dist/images_2/meity_nsf/speakers/sunitaVerma.jpg" title="speaker">
+                    <div class="overlay">&nbsp;</div>
+
+                    <div class="content">
+                        <h3>Sunita Verma</h3>
+
+                        <p>Group Coordinator, Ministry of Electronics &amp; Information Technology</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-6 col-lg-4  col-xl-3 card-js">
+                <div class="img-card ratio ratio-9x16 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100"><img alt="Speaker 4" class="img-fluid" src="https://ism.gov.in/static/dist/images_2/meity_nsf/speakers/H_P_Khincha.png" title="speaker">
+                    <div class="overlay">&nbsp;</div>
+
+                    <div class="content">
+                        <h3>Prof. H.P.Khincha</h3>
+
+                        <p>Chairman, Karnataka State Innovation Council</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-6 col-lg-4  col-xl-3 card-js">
+                <div class="img-card ratio ratio-9x16 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100"><img alt="Speaker 4" class="img-fluid" src="https://ism.gov.in/static/dist/images_2/meity_nsf/speakers/kiran_kuchi.jpg" title="speaker">
+                    <div class="overlay">&nbsp;</div>
+
+                    <div class="content">
+                        <h3>Prof. Kiran Kuchi</h3>
+
+                        <p>Professor, Indian Institute of Technology - Hyderabad</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-6 col-lg-4  col-xl-3 card-js">
+                <div class="img-card ratio ratio-9x16 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100"><img alt="Speaker 4" class="img-fluid" src="https://ism.gov.in/static/dist/images_2/meity_nsf/speakers/Gita_Krishnan.png " title="speaker">
+                    <div class="overlay">&nbsp;</div>
+
+                    <div class="content">
+                        <h3>Gita Krishnan</h3>
+
+                        <p>Professor, Indian Institute of Technology - Madras</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-6 col-lg-4  col-xl-3 card-js">
+                <div class="img-card ratio ratio-9x16 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100"><img alt="Speaker 4" class="img-fluid" src="https://ism.gov.in/static/dist/images_2/meity_nsf/speakers/sandip_chatterjee.jpg " title="speaker">
+                    <div class="overlay">&nbsp;</div>
+
+                    <div class="content">
+                        <h3>Dr. Sandip Chatterjee</h3>
+
+                        <p>Group Coordinator, Ministry of Electronics &amp; Information Technology</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-6 col-lg-4  col-xl-3 card-js">
+                <div class="img-card ratio ratio-9x16 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100"><img alt="Speaker 4" class="img-fluid" src="https://ism.gov.in/static/dist/images_2/meity_nsf/speakers/sk_marwaha.jpg " title="speaker">
+                    <div class="overlay">&nbsp;</div>
+
+                    <div class="content">
+                        <h3>Mr. S.K. Marwaha</h3>
+
+                        <p>Group Coordinator, Ministry of Electronics &amp; Information Technology</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-6 col-lg-4  col-xl-3 card-js">
+                <div class="img-card ratio ratio-9x16 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100"><img alt="Speaker 4" class="img-fluid" src="https://d2p5j06zete1i7.cloudfront.net/Cms/admin/1698728440.jpg" title="speaker">
+                    <div class="overlay">&nbsp;</div>
+
+                    <div class="content">
+                        <h3>Nirmalya Roy</h3>
+
+                        <p>Professor, University of Maryland Baltimore County</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-6 col-lg-4  col-xl-3 card-js">
+                <div class="img-card ratio ratio-9x16 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100"><img alt="Speaker 4" class="img-fluid" src="https://d2p5j06zete1i7.cloudfront.net/Cms/admin/1698728493.jpg" title="speaker">
+                    <div class="overlay">&nbsp;</div>
+
+                    <div class="content">
+                        <h3>Sajal Das</h3>
+
+                        <p>Professor, Missouri University of Science and Technology</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-12 ism-elem2_btn d-flex justify-content-center py-5">
+              <button id="showMoreBtn" class="theme-Btn theme-Btn-dark">Show More</button>
+            <button id="showLessBtn" class="theme-Btn theme-Btn-dark d-none">
+              Show Less
+            </button>
+            </div>
+
+        </div>
+        </div>
+    </div>
+</section>
   <section class="usefull_link_section py-5">
     <div class="container">
       <div class="row">
@@ -1108,6 +1408,7 @@
     </div>
   </section>
   <script src="./js/header.js"></script>
+  <script src="./js/cards.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="/js/bootstrap.bundle.min.js"></script>
 
