events pages linking

--- a/events-SES2024.html
+++ b/events-SES2024.html
@@ -97,9 +97,9 @@
             </div>
             <ul class="dropdown__menu">
               <li><a class="dropdown__link" href="/about-semicon.html">About SemiconIndia</a></li>
-              <li><a class="dropdown__link" href="https://ism.gov.in/semicon-2024.html">SEMICON INDIA 2024</a></li>
-              <li><a class="dropdown__link" href="https://ism.gov.in/semicon2023.html">SemiconIndia 2023</a></li>
-              <li> <a class="dropdown__link" href="https://ism.gov.in/semicon2022.html">SemiconIndia 2022</a></li>
+              <li><a class="dropdown__link" href="/events-semicon2024.html">SEMICON INDIA 2024</a>SEMICON INDIA 2024</a></li>
+              <li><a class="dropdown__link" href="/events-semicon2023.html">SemiconIndia 2023</a></li>
+              <li> <a class="dropdown__link" href="/events-semicon2022.html">SemiconIndia 2022</a></li>
             </ul>
           </li>
           <li class="dropdown__item">
@@ -168,10 +168,10 @@
   <section class="about_section py-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-6 align-content-center">
+        <div class="col-sm-12 col-md-6 align-content-center">
           <div class=""><img src="./images/events/SES-2024.webp" alt="" class="img-fluid"></div>
         </div>
-        <div class="col-md-6 d-flex flex-column justify-content-center">
+        <div class="col-sm-12 col-md-6 d-flex flex-column justify-content-center">
           <div class="">
             <p class="main-heading">ABOUT</p>
             <p class="sub-heading">Semiconductor Executives' Summit 2024</p>
