--- a/events-semicon2024.html
+++ b/events-semicon2024.html
@@ -97,9 +97,9 @@
 						</div>
 						<ul class="dropdown__menu">
 							<li><a class="dropdown__link" href="/about-semicon.html">About SemiconIndia</a></li>
-							<li><a class="dropdown__link" href="https://ism.gov.in/semicon-2024.html">SEMICON INDIA 2024</a></li>
-							<li><a class="dropdown__link" href="https://ism.gov.in/semicon2023.html">SemiconIndia 2023</a></li>
-							<li> <a class="dropdown__link" href="https://ism.gov.in/semicon2022.html">SemiconIndia 2022</a></li>
+							<li><a class="dropdown__link" href="/events-semicon2024.html">SEMICON INDIA 2024</a>SEMICON INDIA 2024</a></li>
+							<li><a class="dropdown__link" href="/events-semicon2023.html">SemiconIndia 2023</a></li>
+							<li> <a class="dropdown__link" href="/events-semicon2022.html">SemiconIndia 2022</a></li>
 						</ul>
 					</li>
 					<li class="dropdown__item">
