--- a/sitemap.html
+++ b/sitemap.html
@@ -100,9 +100,9 @@
           </div>           
           <ul class="dropdown__menu">               
              <li><a class="dropdown__link" href="/about-semicon.html">About SemiconIndia</a></li>
-             <li><a class="dropdown__link" href="https://ism.gov.in/semicon-2024.html">SEMICON INDIA 2024</a></li>
-             <li><a class="dropdown__link" href="https://ism.gov.in/semicon2023.html">SemiconIndia 2023</a></li>
-             <li> <a class="dropdown__link" href="https://ism.gov.in/semicon2022.html">SemiconIndia 2022</a></li>
+             <li><a class="dropdown__link" href="/events-semicon2024.html">SEMICON INDIA 2024</a>SEMICON INDIA 2024</a></li>
+             <li><a class="dropdown__link" href="/events-semicon2023.html">SemiconIndia 2023</a></li>
+             <li> <a class="dropdown__link" href="/events-semicon2022.html">SemiconIndia 2022</a></li>
           </ul>
        </li>
        <li class="dropdown__item">
@@ -144,7 +144,7 @@
      </div>
 
      <div class="nav__data">
-      <a href="#" class="nav__logo">
+      <a href="/index.html" class="nav__logo">
         <img alt="Digital india logo" class="img-fluid"
             src="images/header/ism_header_logo.png">
       </a>
@@ -186,10 +186,13 @@
             <div class="ism-sitemap__info_head">About Us</div>
 
             <div class="ism-sitemap__info_content">
-              <a class="ism-sitemap__info_item" href="#">Our Ministers</a><!-- <a class="ism-sitemap__info_item" href="/our-ministers-state">Our Ministers of State</a> --><a
-                class="ism-sitemap__info_item" href="about-us.html">About ISM</a><a class="ism-sitemap__info_item" href="/ism-vision.html">Vision & Objectives</a> <a
-                class="ism-sitemap__info_item" href="/our-team.html">Our Team</a><a class="ism-sitemap__info_item" href="/ism-commitee.html">ISM Committee</a> <a class="ism-sitemap__info_item" href="/advisory-commitee.html">Advisory
-                Committee</a><a class="ism-sitemap__info_item" href="/useful-links.html">Useful Links</a>
+              <a class="ism-sitemap__info_item" href="/our-team.html">Our Ministers</a>
+              <a class="ism-sitemap__info_item" href="/about-us.html">About ISM</a>
+              <a class="ism-sitemap__info_item" href="/ism-vision.html">Vision & Objectives</a> 
+              <a class="ism-sitemap__info_item" href="/our-team.html">Our Team</a>
+              <a class="ism-sitemap__info_item" href="/ism-commitee.html">ISM Committee</a> 
+              <a class="ism-sitemap__info_item" href="/advisory-commitee.html">Advisory Committee</a>
+              <a class="ism-sitemap__info_item" href="/useful-links.html">Useful Links</a>
             </div>
           </div>
           &nbsp;
@@ -211,19 +214,22 @@
           <div class="ism-sitemap__info">
             <div class="ism-sitemap__info_head">SemiconIndia</div>
 
-            <div class="ism-sitemap__info_content"><a class="ism-sitemap__info_item" href="/about-semicon.html">About SemiconIndia</a> <a class="ism-sitemap__info_item" href="#">SEMICON INDIA 2024</a><a
-                class="ism-sitemap__info_item" href="#">SemiconIndia 2023</a> <a class="ism-sitemap__info_item" href="#">SemiconIndia 2022</a> </div>
+            <div class="ism-sitemap__info_content">
+              <a class="ism-sitemap__info_item" href="/about-semicon.html">About SemiconIndia</a>
+               <a class="ism-sitemap__info_item" href="/events-semicon2024.html">SEMICON INDIA 2024</a>
+               <a class="ism-sitemap__info_item" href="/events-semicon2023.html">SemiconIndia 2023</a>
+               <a class="ism-sitemap__info_item" href="/events-semicon2022.html">SemiconIndia 2022</a> </div>
           </div>
           &nbsp;
           <div class="ism-sitemap__info">
             <div class="ism-sitemap__info_head">Gallery</div>
 
             <div class="ism-sitemap__info_content">
-              <a class="ism-sitemap__info_item" href="/about-semicon.html">SEMICON INDIA 2024</a>
-              <a class="ism-sitemap__info_item" href="#">Semiconductor Executives' Summit (SES) 2024</a>
-              <a class="ism-sitemap__info_item" href="#">SemiconIndia 2023 </a>
-              <a class="ism-sitemap__info_item" href="#">SemiconIndia Conference 2023 </a> 
-              <a class="ism-sitemap__info_item" href="#">SemiconIndia 2022</a> 
+              <a class="ism-sitemap__info_item" href="/gallery-semicon-2024.html">SEMICON INDIA 2024</a>
+              <a class="ism-sitemap__info_item" href="/gallery-semicon-ses-2024.html">Semiconductor Executives' Summit (SES) 2024</a>
+              <a class="ism-sitemap__info_item" href="/gallery-semicon-2023.html">SemiconIndia 2023 </a>
+              <a class="ism-sitemap__info_item" href="/gallery-semiconferrence-2023.html">SemiconIndia Conference 2023 </a> 
+              <a class="ism-sitemap__info_item" href="/gallery-semicon-2022.html">SemiconIndia 2022</a> 
           </div>
         </div>
         </div>
@@ -231,21 +237,22 @@
           <div class="ism-sitemap__info">
             <div class="ism-sitemap__info_head">Schemes</div>
 
-            <div class="ism-sitemap__info_content"><a class="ism-sitemap__info_item" href="#">Semiconductor Fabs</a> <a
-                class="ism-sitemap__info_item" href="#">Display Fabs</a> <a class="ism-sitemap__info_item"
-                href="#">Compound/ATMP/OSAT</a> <a class="ism-sitemap__info_item"
-                href="#">Design Linked Incentive</a></div>
+            <div class="ism-sitemap__info_content">
+              <a class="ism-sitemap__info_item" href="/semiconductor-scheme.html">Semiconductor Fabs</a> 
+              <a class="ism-sitemap__info_item" href="/display-scheme.html">Display Fabs</a> 
+              <a class="ism-sitemap__info_item" href="/compound-scheme.html">Compound/ATMP/OSAT</a> 
+              <a class="ism-sitemap__info_item" href="/design-link-scheme.html">Design Linked Incentive</a></div>
           </div>
           &nbsp;
           <div class="ism-sitemap__info">
             <div class="ism-sitemap__info_head">Events</div>
             <div class="ism-sitemap__info_content"> 
-              <a class="ism-sitemap__info_item" href="#">SEMICON INDIA 2024</a>
-              <a class="ism-sitemap__info_item" href="#">Semiconductor Executives' Summit (SES) 2024</a>
-              <a class="ism-sitemap__info_item" href="#">Workshop on MEITY</a> 
-              <a class="ism-sitemap__info_item" href="#">SemiconIndia 2023</a>
-              <a class="ism-sitemap__info_item" href="#">SemiconIndia Conference 2023 </a> 
-              <a class="ism-sitemap__info_item" href="#">SemiconIndia 2022</a> 
+              <a class="ism-sitemap__info_item" href="/events-semicon2024.html">SEMICON INDIA 2024</a>
+              <a class="ism-sitemap__info_item" href="/events-SES2024.html">Semiconductor Executives' Summit (SES) 2024</a>
+              <a class="ism-sitemap__info_item" href="/events-workshopMeity.html">Workshop on MEITY</a> 
+              <a class="ism-sitemap__info_item" href="/events-semicon2023.html">SemiconIndia 2023</a>
+              <a class="ism-sitemap__info_item" href="/events-semiconferrence2023.html">SemiconIndia Conference 2023 </a> 
+              <a class="ism-sitemap__info_item" href="/events-semicon2022.html">SemiconIndia 2022</a> 
             </div>
           </div>
         </div>
