sonali feedback, Header & footer final fixes

--- a/events-semiconferrence2023.html
+++ b/events-semiconferrence2023.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ISM Website</title>
 	<link rel="icon" href="/images/favicon.png" type="image/x-icon">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -97,7 +100,7 @@
             </div>
             <ul class="dropdown__menu">
               <li><a class="dropdown__link" href="/about-semicon.html">About SemiconIndia</a></li>
-              <li><a class="dropdown__link" href="/events-semicon2024.html">SEMICON INDIA 2024</a>SEMICON INDIA 2024</a></li>
+              <li><a class="dropdown__link" href="/events-semicon2024.html">SEMICON INDIA 2024</a></li>
               <li><a class="dropdown__link" href="/events-semicon2023.html">SemiconIndia 2023</a></li>
               <li> <a class="dropdown__link" href="/events-semicon2022.html">SemiconIndia 2022</a></li>
             </ul>
@@ -184,6 +187,30 @@
               the industry. The outcomes of this conference are expected to provide a thrust toward building a vibrant
               semiconductor manufacturing ecosystem in India.</p>
           </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="py-5">
+    <div class="container">
+      <div class="row"> 
+        <div class="col-sm-12">
+         <p class="sub-heading mb-4">HIGHLIGHTS</p>
+        </div>
+       </div>
+      <div class="row"> 
+        <div class="col-sm-12 d-flex flex-column">
+          <div class="highlights-cards">
+						<h3 class="mb-3">Electronics Industry Is Largest And Fastest Growing Segments</h3>
+						<p>The electronics industry is one of the world’s largest and fastest growing segments of the economy for
+              which semiconductors and displays are the backbone constituting a significant portion to the total Bill of
+              Material. Fostering the Hon’ble Prime Minister’s vision of AatmaNirbhar Bharat, the Ministry of
+              Electronics &Information Technology has been actively working to create a conducive environment for
+              electronics manufacturing. </p>
+            <p>With a view to ensure the development of a robust and sustainable semiconductor and display ecosystem in
+              India, Semicon India Programme was introduced with an outlay of INR 76,000 crore. The said program aims to
+              extend fiscal support for establishment of the following:</p>
+					</div>
         </div>
       </div>
     </div>
@@ -557,30 +584,7 @@
 				</div>
 		</div>
 	</section> 
-  <section class="py-5">
-    <div class="container">
-      <div class="row"> 
-        <div class="col-sm-12">
-         <p class="sub-heading mb-4">HIGHLIGHTS</p>
-        </div>
-       </div>
-      <div class="row"> 
-        <div class="col-sm-12 d-flex flex-column">
-          <div class="highlights-cards">
-						<h3 class="mb-3">Electronics Industry Is Largest And Fastest Growing Segments</h3>
-						<p>The electronics industry is one of the world’s largest and fastest growing segments of the economy for
-              which semiconductors and displays are the backbone constituting a significant portion to the total Bill of
-              Material. Fostering the Hon’ble Prime Minister’s vision of AatmaNirbhar Bharat, the Ministry of
-              Electronics &Information Technology has been actively working to create a conducive environment for
-              electronics manufacturing. </p>
-            <p>With a view to ensure the development of a robust and sustainable semiconductor and display ecosystem in
-              India, Semicon India Programme was introduced with an outlay of INR 76,000 crore. The said program aims to
-              extend fiscal support for establishment of the following:</p>
-					</div>
-        </div>
-      </div>
-    </div>
-  </section>
+
 	<section class="gallery-section py-5">
 		<div class="container">
 			<div class="row">
@@ -883,7 +887,7 @@
   <footer class="ism-footer py-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-4 d-flex flex-column justify-content-around mb-4">
+        <div class="col-sm-12 col-md-6 col-lg-4 d-flex flex-column justify-content-around mb-4">
           <div class="ism-footer-logo-link">
             <a href="/index.html">
               <img class="img-fluid" src="images/footer/ism_footer.webp" alt="">
@@ -900,8 +904,8 @@
             </a>
           </div>
         </div>
-        <div class="col-md-4 mb-4 vl">
-          <div class="d-md-flex d-sm-block justify-content-around ism-footer-box-size vt">
+        <div class="col-sm-12 col-md-6 col-lg-4 mb-4 vl">
+          <div class="d-md-flex d-sm-block justify-content-between ism-footer-box-size vt">
             <div class="ism-footer-useful-links mb-4">
               <h5 class="">Useful Links</h5>
               <ul>
@@ -918,30 +922,24 @@
               <h5 class="">Social Media</h5>
               <ul>
                 <li>
-                  <a href="https://x.com/Semicon_India" target="_blank">
-                    <img src="images/footer/twitter_icon.png" alt="">Twitter</a>
+                  <a href="https://x.com/Semicon_India" target="_blank"><img src="images/footer/twitter_icon.png"
+                      alt="">Twitter</a>
                 </li>
                 <li>
-                  <a href="https://www.youtube.com/@IndiaSemiconductorMission" target="_blank">
-                    <img src="images/footer/youtube_icon.png" alt="">Youtube</a>
+                  <a href="https://www.youtube.com/@IndiaSemiconductorMission" target="_blank"><img
+                      src="images/footer/youtube_icon.png" alt="">Youtube</a>
                 </li>
-                <li>
-                  <a href="https://www.linkedin.com/company/indiasemiconductormission/" target="_blank">
-                    <img src="images/footer/linkedin_icon.png" alt="">LinkedIn</a>
-                </li>
-                <li>
-                  <a href="https://www.instagram.com/ism_indiasemiconductor/" target="_blank">
-                    <img src="images/footer/instagram_icon.png" alt="">Instagram</a>
-                </li>
-                <li>
-                  <a href="https://webcast.gov.in/meity/semiconindia" target="_blank">
-                    <img src="images/footer/webcast_icon.png" alt="">Webcast</a>
-                </li>
+                <li><a href="https://www.linkedin.com/company/indiasemiconductormission/" target="_blank"><img
+                      src="images/footer/linkedin_icon.png" alt="">LinkedIn</a></li>
+                <li><a href="https://www.instagram.com/ism_indiasemiconductor/" target="_blank"><img
+                      src="images/footer/instagram_icon.png" alt="">Instagram</a></li>
+                <li><a href="https://webcast.gov.in/meity/semiconindia" target="_blank"><img
+                      src="images/footer/webcast_icon.png" alt="">Webcast</a></li>
               </ul>
             </div>
           </div>
         </div>
-        <div class="col-md-4 mb-4  vl">
+        <div class="col-sm-12 col-md-12 col-lg-4 mb-4 vl">
           <div class="ism-footer-box-size vt ">
             <h5 class="">Reach out to us</h5>
             <ul>
@@ -954,14 +952,14 @@
                 <a href="mailto:ism-dic@gov.in"><img src="images/footer/mail_icon.png" alt="">ism-dic@gov.in</a>
               </li>
             </ul>
-            <div class="d-flex">
+            <div class="d-flex display-coll">
               <div class="ism-footer-iframe mt-2">
                 <iframe
                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3503.4426849656206!2d77.23733871489236!3d28.586493582435974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce2fdedaabe87%3A0xadd98301faac65ce!2sElectronics%20Niketan%2C%20CGO%20Complex%2C%206%20Lodhi%20Road%2C%20Lodhi%20Rd%2C%20CGO%20Complex%2C%20Pragati%20Vihar%2C%20New%20Delhi%2C%20Delhi%20110003!5e0!3m2!1sen!2sin!4v1675947021093!5m2!1sen!2sin"
                   frameborder="0" height="100%">
                 </iframe>
               </div>
-              <div class="ism-footer-iframe2 mt-2 mx-2 px-2">
+              <div class="ism-footer-iframe2 mt-2 mx-1 px-1">
                 <img src="./images/new_qr_image.png" alt="">
               </div>
             </div>
