--- a/gallery-semicon-2024.html
+++ b/gallery-semicon-2024.html
@@ -96,7 +96,7 @@
           </div>           
           <ul class="dropdown__menu">               
              <li><a class="dropdown__link" href="/about-semicon.html">About SemiconIndia</a></li>
-             <li><a class="dropdown__link" href="/events-semicon2024.html">SEMICON INDIA 2024</a>SEMICON INDIA 2024</a></li>
+             <li><a class="dropdown__link" href="/events-semicon2024.html">SEMICON INDIA 2024</a></li>
              <li><a class="dropdown__link" href="/events-semicon2023.html">SemiconIndia 2023</a></li>
              <li> <a class="dropdown__link" href="/events-semicon2022.html">SemiconIndia 2022</a></li>
           </ul>
@@ -545,10 +545,10 @@
     </div>
   </section>
 
-  <footer class="ism-footer py-5">
+<footer class="ism-footer py-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-4 d-flex flex-column justify-content-around mb-4">
+        <div class="col-sm-12 col-md-6 col-lg-4 d-flex flex-column justify-content-around mb-4">
           <div class="ism-footer-logo-link">
             <a href="/index.html">
               <img class="img-fluid" src="images/footer/ism_footer.webp" alt="">
@@ -565,8 +565,8 @@
             </a>
           </div>
         </div>
-        <div class="col-md-4 mb-4 vl">
-          <div class="d-md-flex d-sm-block justify-content-around ism-footer-box-size vt">
+        <div class="col-sm-12 col-md-6 col-lg-4 mb-4 vl">
+          <div class="d-md-flex d-sm-block justify-content-between ism-footer-box-size vt">
             <div class="ism-footer-useful-links mb-4">
               <h5 class="">Useful Links</h5>
               <ul>
@@ -581,32 +581,26 @@
             </div>
             <div class="ism-footer-useful-links mb-4">
               <h5 class="">Social Media</h5>
-         <ul>
+              <ul>
                 <li>
-                  <a href="https://x.com/Semicon_India" target="_blank">
-                    <img src="images/footer/twitter_icon.png" alt="">Twitter</a>
+                  <a href="https://x.com/Semicon_India" target="_blank"><img src="images/footer/twitter_icon.png"
+                      alt="">Twitter</a>
                 </li>
                 <li>
-                  <a href="https://www.youtube.com/@IndiaSemiconductorMission" target="_blank">
-                    <img src="images/footer/youtube_icon.png" alt="">Youtube</a>
-                  </li>
-                <li>
-                  <a href="https://www.linkedin.com/company/indiasemiconductormission/" target="_blank">
-                    <img src="images/footer/linkedin_icon.png" alt="">LinkedIn</a>
-                  </li>
-                <li>
-                  <a href="https://www.instagram.com/ism_indiasemiconductor/" target="_blank">
-                    <img src="images/footer/instagram_icon.png" alt="">Instagram</a>
-                  </li>
-                <li>
-                  <a href="https://webcast.gov.in/meity/semiconindia" target="_blank">
-                    <img src="images/footer/webcast_icon.png" alt="">Webcast</a>
-                  </li>
+                  <a href="https://www.youtube.com/@IndiaSemiconductorMission" target="_blank"><img
+                      src="images/footer/youtube_icon.png" alt="">Youtube</a>
+                </li>
+                <li><a href="https://www.linkedin.com/company/indiasemiconductormission/" target="_blank"><img
+                      src="images/footer/linkedin_icon.png" alt="">LinkedIn</a></li>
+                <li><a href="https://www.instagram.com/ism_indiasemiconductor/" target="_blank"><img
+                      src="images/footer/instagram_icon.png" alt="">Instagram</a></li>
+                <li><a href="https://webcast.gov.in/meity/semiconindia" target="_blank"><img
+                      src="images/footer/webcast_icon.png" alt="">Webcast</a></li>
               </ul>
             </div>
           </div>
         </div>
-        <div class="col-md-4 mb-4  vl">
+        <div class="col-sm-12 col-md-12 col-lg-4 mb-4 vl">
           <div class="ism-footer-box-size vt ">
             <h5 class="">Reach out to us</h5>
             <ul>
@@ -619,14 +613,14 @@
                 <a href="mailto:ism-dic@gov.in"><img src="images/footer/mail_icon.png" alt="">ism-dic@gov.in</a>
               </li>
             </ul>
-            <div class="d-flex">
+            <div class="d-flex display-coll">
               <div class="ism-footer-iframe mt-2">
                 <iframe
                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3503.4426849656206!2d77.23733871489236!3d28.586493582435974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce2fdedaabe87%3A0xadd98301faac65ce!2sElectronics%20Niketan%2C%20CGO%20Complex%2C%206%20Lodhi%20Road%2C%20Lodhi%20Rd%2C%20CGO%20Complex%2C%20Pragati%20Vihar%2C%20New%20Delhi%2C%20Delhi%20110003!5e0!3m2!1sen!2sin!4v1675947021093!5m2!1sen!2sin"
                   frameborder="0" height="100%">
                 </iframe>
               </div>
-              <div class="ism-footer-iframe2 mt-2 mx-2 px-2">
+              <div class="ism-footer-iframe2 mt-2 mx-1 px-1">
                 <img src="./images/new_qr_image.png" alt="">
               </div>
             </div>
