--- a/index.html
+++ b/index.html
@@ -1098,7 +1098,7 @@
   <footer class="ism-footer py-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-4 d-flex flex-column justify-content-around mb-4">
+        <div class="col-sm-12 col-md-6 col-lg-4 d-flex flex-column justify-content-around mb-4">
           <div class="ism-footer-logo-link">
             <a href="/index.html">
               <img class="img-fluid" src="images/footer/ism_footer.webp" alt="">
@@ -1115,7 +1115,7 @@
             </a>
           </div>
         </div>
-        <div class="col-md-4 mb-4 vl">
+        <div class="col-sm-12 col-md-6 col-lg-4 mb-4 vl">
           <div class="d-md-flex d-sm-block justify-content-between ism-footer-box-size vt">
             <div class="ism-footer-useful-links mb-4">
               <h5 class="">Useful Links</h5>
@@ -1150,7 +1150,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 mb-4 vl">
+        <div class="col-sm-12 col-md-12 col-lg-4 mb-4 vl">
           <div class="ism-footer-box-size vt ">
             <h5 class="">Reach out to us</h5>
             <ul>
