highlight heading removed

--- a/events-semicon2022.html
+++ b/events-semicon2022.html
@@ -195,7 +195,7 @@
       <div class="row">
         <div class="col-sm-12 d-flex flex-column">
           <div class="highlights-cards">
-						<h3 class="mb-3">Electronics Industry Is Largest And Fastest Growing Segments</h3>
+						<!-- <h3 class="mb-3">Electronics Industry Is Largest And Fastest Growing Segments</h3> -->
 						<p>The Conference was inaugurated by Hon’ble Prime Minister of India, Shri Narendra Modi via Video Conference on 29th April, 2022 at 11:00 AM.</p>
             <p>The Conference brings together global leaders from Industry, Academia and Research Institutions.</p>
             <p>The Steering Committee for SemiconIndia Conference 2022 includes a mix of Startups, Academia and Global Industry Leaders demonstrating the Government’s collaborative approach towards powering India’s semiconductor and electronics manufacturing ambitions.</p>
