new footer & banner size changed

--- a/events-semicon2022.html
+++ b/events-semicon2022.html
@@ -1523,7 +1523,7 @@
                 <td>Fireside chat on<br>
                 Emerging designs driving the semiconductor demand</td>
                 <td>Prof. Kamakoti, <b>IIT Madras</b> with Prof. Dave Patterson, <b>UC Berkeley</b></td>
-                <td><strong>Fireside chat</strong> <a class="btn btn-danger mt-2 text-white" href="https://webcast.gov.in/events/MTY4Ng--/session/NDAzNA--?jwsource=cl" target="_blank"><i class="bi bi-youtube mr-1"></i>View</a></td>
+                <td><strong>Fireside chat</strong><br> <a class="btn btn-danger mt-2 text-white" href="https://webcast.gov.in/events/MTY4Ng--/session/NDAzNA--?jwsource=cl" target="_blank"><i class="bi bi-youtube mr-1"></i>View</a></td>
               </tr>
               <tr>
                 <td>17:15 PM</td>
