--- a/useful-links.html
+++ b/useful-links.html
@@ -172,11 +172,9 @@
     </div>
   </section>
 
-  <section class="about_section py-5">
+  <section class="useful-section py-5">
 
-    <div class="container">
-
-  
+    <div class="container">  
         <p class="sub-heading">Semicon India</p>
         <div class="row">
           <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">
