--- a/career.html
+++ b/career.html
@@ -224,11 +224,40 @@
                 <div class="job-post-card">
                   <div class="d-flex justify-content-between">
                     <div class="">
+                      <p class="job-post-card__title">Associate - Admin & HR</p>
+                    </div>
+                    <div class="">
+                      <a href="https://www.naukri.com/job-listings-Associate-Admin-HR-India-Semiconductor-Mission-MeitY--National-Institute-for-Smart-Government-NISG--New-Delhi-2-to-5-years-271224003599"
+                        target="_blank" class="theme-Btn theme-Btn-dark job-apply-btn">Apply</a>
+                    </div>
+                  </div>
+                  <div class="d-flex">
+                    <div class="info pr-4">
+                      <span class="posts-icon"><img src="images/icons/years_icon.png" alt=""></span>
+                      <span class="label">2-4 Years</span>
+                    </div>
+                    <div class="info">
+                      <span class="posts-icon"><img src="images/icons/location_icon.png" alt=""></span>
+                      <span class="label">New Delhi</span>
+                    </div>
+                  </div>
+                  <p> Educational Qualifications: B. Com/MBA in relevant field Relevant Experience: 2-4 years of experience in the field of handling Admin & HR. Prior experience working with Government Organizations will be an added advantage. Preferred Skills: Proficiency in MS Office Suite (Word, Excel, PowerPoint) and ability to work with administrative tools.
+                  </p>
+                  <p class="m-0"><strong>Last Date : </strong> 27.01.2025</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div aria-labelledby="videos-tab" class="tab-pane fade" id="videos" role="tabpanel">
+            <div class="row">
+              <div class="col-sm-12">
+                <div class="job-post-card">
+                  <div class="d-flex justify-content-between">
+                    <div class="">
                       <p class="job-post-card__title">Associate Accounts</p>
                     </div>
                     <div class="">
-                      <a href="https://www.naukri.com/job-listings-Associate-Accounts-ISM-MeitY--National-Institute-for-Smart-Government-NISG--New-Delhi-2-to-6-years-181124008383"
-                        target="_blank" class="theme-Btn theme-Btn-dark job-apply-btn">Apply</a>
+                      <a href="#" target="_blank" class="theme-Btn theme-Btn-dark job-close-btn">Closed</a>
                     </div>
                   </div>
                   <div class="d-flex">
@@ -248,10 +277,6 @@
                   <p class="m-0"><strong>Last Date : </strong> 18.12.2024</p>
                 </div>
               </div>
-            </div>
-          </div>
-          <div aria-labelledby="videos-tab" class="tab-pane fade" id="videos" role="tabpanel">
-            <div class="row">
               <div class="col-sm-12">
                 <div class="job-post-card">
                   <div class="d-flex justify-content-between">
