--- a/ism-vision.html
+++ b/ism-vision.html
@@ -439,10 +439,10 @@
       </div>
     </div>
   </section>
-<footer class="ism-footer py-5">
+<footer class="ism-footer pt-5 pb-3">
     <div class="container">
       <div class="row">
-        <div class="col-sm-12 col-md-6 col-lg-4 d-flex flex-column justify-content-around mb-4">
+        <div class="col-sm-12 col-md-6 col-lg-3 d-flex flex-column justify-content-around mb-4">
           <div class="ism-footer-logo-link">
             <a href="/index.html">
               <img class="img-fluid" src="images/footer/ism_footer.webp" alt="">
@@ -459,7 +459,7 @@
             </a>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-4 mb-4 vl">
+        <div class="col-sm-12 col-md-6 col-lg-4 mb-4 vl px-3">
           <div class="d-md-flex d-sm-block justify-content-between ism-footer-box-size vt">
             <div class="ism-footer-useful-links mb-4">
               <h5 class="">Useful Links</h5>
@@ -494,7 +494,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-12 col-lg-4 mb-4 vl">
+        <div class="col-sm-12 col-md-12 col-lg-5 mb-4 vl px-3">
           <div class="ism-footer-box-size vt ">
             <h5 class="">Reach out to us</h5>
             <ul>
@@ -508,13 +508,13 @@
               </li>
             </ul>
             <div class="d-flex display-coll">
-              <div class="ism-footer-iframe mt-2">
+              <div class="ism-footer-iframe">
                 <iframe
                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3503.4426849656206!2d77.23733871489236!3d28.586493582435974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce2fdedaabe87%3A0xadd98301faac65ce!2sElectronics%20Niketan%2C%20CGO%20Complex%2C%206%20Lodhi%20Road%2C%20Lodhi%20Rd%2C%20CGO%20Complex%2C%20Pragati%20Vihar%2C%20New%20Delhi%2C%20Delhi%20110003!5e0!3m2!1sen!2sin!4v1675947021093!5m2!1sen!2sin"
                   frameborder="0" height="100%">
                 </iframe>
               </div>
-              <div class="ism-footer-iframe2 mt-2 mx-1 px-1">
+              <div class="ism-footer-iframe2 mx-2">
                 <img src="./images/new_qr_image.png" alt="">
               </div>
             </div>
