header hover effect

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
       <div class="ism-hmBanner_marquee_label">
         <span class="marquee-icon">
           <img src="images/icons/announcement_icon.png"></span><p><strong>Announcements :</strong></p></div>
-      <div class="ism-hmBanner_marquee_value">
+      <div class="ism-hmBanner_marquee_value d-none">
         <marquee direction="left" onmouseout="this.start()" onmouseover="this.stop()" width="100%"> 
           <a class="me-3" href="/events-semicon2024.html">SEMICON INDIA 2024 - Positioning India as a Trusted Partner in the Global Semiconductor Supply Chain.</a>
         </marquee>
@@ -348,11 +348,11 @@
   <section class="scheme-section py-5 desktop-scheme">
     <div class="container">
       <div class="row mb-4">
-        <div class="col-md-1">
+        <div class="col-md-2">
           <p class="main-heading"><span><img src="images/icons/schemes_icon.png"></span>ISM</p>
           <p class="sub-heading">Schemes</p>
         </div>
-        <div class="col-md-11">
+        <div class="col-md-10">
           <ul class="nav nav-pills justify-content-end" id="pills-tab" role="tablist">
             <li class="nav-item nav-buttons" role="presentation">
               <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home"
@@ -364,7 +364,7 @@
             </li>
             <li class="nav-item nav-buttons" role="presentation">
               <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact"
-                type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Compound Semiconductor &
+                type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Compound &
                 Semiconductor ATMP</button>
             </li>
             <li class="nav-item nav-buttons" role="presentation">
