--- a/events.html
+++ b/events.html
@@ -205,6 +205,21 @@
           </a>
         </div>
         <div class="col-md-6 col-lg-4">
+          <a href="/events-futuredesign2023.html">
+            <div class="main-event-cards">
+              <img src="./images/events/Future_Design.png"
+                class="img-fluid br-8">
+              <div class="event-content pt-3">
+                <h3>SemiconIndia futureDESIGN 2023-  Catalyzing India’s NextGeneration Semiconductor Design Startups</h3>
+                <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
+                      style="height:30px; width:30px;margin-right: 10px;"></span>12th May 2023</p>
+                <p><span class=""><img src="images/icons/location_icon.png" alt=""
+                      style="height:30px; width:30px;margin-right: 10px;"></span>IIT Delhi, New Delhi</p>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-6 col-lg-4">
           <a href="/events-semicon2022.html">
             <div class="main-event-cards">
               <img src="https://d2p5j06zete1i7.cloudfront.net/static/dist/images_2/gallery/april_2022/15.jpg"
